BuildHughes/translation-tool/inputs/source_meta/objects/SA_Cancel_Reason__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CANCEL_REASON_CD__c</fullName>
        <label>CANCEL_REASON_CD</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CANCEL_REASON_DESC__c</fullName>
        <label>CANCEL_REASON_DESC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>language__c</fullName>
        <label>language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SA Cancel Reason</label>
</CustomObject>